--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,6 +115,8 @@ dependencies {
         implementation("com.facebook.react:hermes-android")
     } else {
         implementation jscFlavor
+        implementation project(':react-native-vector-icons')
     }
 }
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
