--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
